--- a/package.json
+++ b/package.json
@@ -7,11 +7,16 @@
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.8.3",
     "bootstrap": "^4.6.0",
+    "create-react-class": "^15.7.0",
     "local-storage": "^2.0.0",
+    "moment": "^2.29.1",
+    "moment-timezone": "^0.5.33",
     "node-sass": "^5.0.0",
     "objectid-to-timestamp": "^1.3.0",
     "react": "^17.0.1",
     "react-bootstrap": "^1.5.1",
+    "react-bootstrap-date-picker": "^5.1.0",
+    "react-datepicker": "^3.7.0",
     "react-dom": "^17.0.1",
     "react-icons": "^4.2.0",
     "react-router-dom": "^5.2.0",
