--- a/package.json
+++ b/package.json
@@ -4,10 +4,12 @@
   "private": false,
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.9",
-    "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.8.3",
     "bootstrap": "^4.6.0",
     "create-react-class": "^15.7.0",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.6",
+    "enzyme-to-json": "^3.6.1",
     "local-storage": "^2.0.0",
     "moment": "^2.29.1",
     "moment-timezone": "^0.5.33",
@@ -21,6 +23,7 @@
     "react-icons": "^4.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-test-renderer": "^17.0.2",
     "react-toastify": "^7.0.3",
     "web-vitals": "^1.1.0"
   },
@@ -52,6 +55,7 @@
     ]
   },
   "devDependencies": {
+    "@testing-library/react": "^11.2.6",
     "cross-env": "^5.2.0",
     "json-server": "^0.15.0",
     "npm-run-all": "^4.1.5"
