test de déploiement

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "projetsynthesemaudharvey",
   "version": "0.1.0",
   "private": false,
+  "homepage": "/projetsynthesemaudharvey/build/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/user-event": "^12.8.3",
