--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
   },
   "devDependencies": {
     "@testing-library/react": "^11.2.6",
+    "@wojtekmaj/enzyme-adapter-react-17": "^0.6.0",
     "cross-env": "^5.2.0",
     "json-server": "^0.15.0",
     "npm-run-all": "^4.1.5"
